testsuite/serd-tests/good/test-backspace.nt
<http://example.org/eg#s> <http://example.org/eg#p> "\u0008" .
<http://example.org/eg#s> <http://example.org/eg#p> "\u0008" .
<http://example.org/eg#s> <http://example.org/eg#p> "\n\u0008\n" .
