testsuite/serd-tests/bad/bad-nt-syntax-lf-in-string.nt
<http://example.org/s> <http://example.org/p> "multi
line" .

